--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,11 +36,12 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  firebase_core: ^2.2.0
+  firebase_core: ^2.4.1
   firebase_auth:
   cloud_firestore:
   http:
-
+dependency_overrides:
+  firebase_core_platform_interface: 4.5.2
 dev_dependencies:
   flutter_test:
     sdk: flutter
